# milvus-bge-seek

./: README.md  start-dev.cmd  问答链路精细化流程说明.md
client/: .env.example  README.md  package.json  前端架构规范文档.md
client/app/: assistant.tsx
client/lib/: chatApi.ts  langgraphApi.ts  serverCompatApi.ts
server/: .env.example  .gitignore  RAG_项目架构设计文档.md  README.md  docker-compose.yml  langgraph.json  pyproject.toml  前端对接清单.md  后端架构规范文档.md
server/src/agent/: __init__.py  compat_api.py  config.py  context.py  dependencies.py  graph.py  prompts.py  state.py
server/src/agent/api/: __init__.py  compat_models.py  compat_router.py
server/src/agent/components/: __init__.py  factories.py
server/src/agent/nodes/: __init__.py  admin_flow.py  assistant_flow.py  delete_flow.py  ingest_flow.py  query_flow.py  reindex_flow.py
server/src/agent/repositories/: assistant_thread_repository.py  postgres_base.py  postgres_read_repository.py  postgres_registry_repository.py  postgres_schema_manager.py
server/src/agent/schemas/: admin_constants.py  admin_contracts.py  page_contracts.py
server/src/agent/services/: __init__.py  admin_application_service.py  admin_page_contract_service.py  answer_service.py  compat_application_service.py  conversation_service.py  delete_application_service.py  document_parser_service.py  document_source_service.py  document_source_store_service.py  ingest_application_service.py  ingestion_service.py  milvus_admin_service.py  reindex_application_service.py  rerank_service.py  retrieval_service.py
server/src/agent/utils/: documents.py
server/tests/: conftest.py
server/tests/integration_tests/: test_graph.py
server/tests/unit_tests/: test_admin_application_service.py  test_admin_page_contract_service.py  test_compat_application_service.py  test_configuration.py  test_delete_application_service.py  test_document_parser_service.py  test_document_source_service.py  test_document_source_store_service.py  test_ingestion_service.py  test_postgres_read_repository.py  test_postgres_repository_base.py
(+18 files in other folders)
