[project]
name = "agent"
version = "0.0.1"
description = "LangGraph RAG server skeleton built with DeepSeek, BGE, and Milvus."
authors = [
    { name = "William Fu-Hinthorn", email = "13333726+hinthornw@users.noreply.github.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "docx2txt>=0.8",
    "fastapi>=0.115.0",
    "langgraph>=1.0.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-deepseek>=0.1.0",
    "langchain-huggingface>=0.1.0",
    "langchain-milvus>=0.1.0",
    "langchain-text-splitters>=0.3.0",
    "openpyxl>=3.1.5",
    "minio>=7.2.7",
    "pydantic-settings>=2.6.0",
    "psycopg[binary]>=3.2.0",
    "pypdf>=5.1.0",
    "pymilvus>=2.5.0",
    "python-pptx>=1.0.2",
    "python-dotenv>=1.0.1",
    "sentence-transformers>=3.0.0",
    "uvicorn>=0.32.0",
]


[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["agent*"]


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "anyio>=4.7.0",
    "langgraph-cli[inmem]>=0.4.14",
    "mypy>=1.13.0",
    "pytest>=8.3.5",
    "ruff>=0.8.2",
]
